# bug-bounty-framework

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: architecture.mdc  code-patterns.mdc  cursor-rules-management.mdc  database.mdc  epics.mdc  implementation-patterns.mdc  project-config.mdc  rules.mdc  test_suite.mdc  testing-conventions.mdc  user-rules-template.mdc  workflow-state.mdc
bbf/: __init__.py  __main__.py
bbf/config/: ports.json  services.json  user_agents.json
bbf/core/: __init__.py  base.py  config.py  dev_tools.py  exceptions.py  execution.py  framework.py  integration.py  marketplace.py  metadata.py  metadata_manager.py  monitoring.py  plugin.py  plugin_manager.py  security.py  service.py  stage.py  state.py  validation.py
bbf/core/ai/: __init__.py  config.py  monitoring.py  openai.py  service.py
bbf/core/database/: README.md  config.py  connection.py  models.py  repository.py  service.py
bbf/core/database/migrations/: env.py
bbf/core/tests/: test_plugin_manager.py
bbf/plugins/: __init__.py  base.py  base_plugin.py  config.py  example_plugins.py
bbf/plugins/example_plugins/: subdomain_enumeration.py
bbf/plugins/recon/: __init__.py  dir_brute.py  port_scan.py  subdomain_enum.py  vuln_scan.py  web_tech.py
bbf/plugins/vuln/: scanner.py
bbf/stages/: __init__.py  base_stage.py  recon.py  report.py  scan.py  test.py
bbf/tests/: conftest.py
bbf/tests/ai/: test_config.py  test_monitoring.py  test_openai.py  test_service.py
bbf/tests/integration/: __init__.py  conftest.py  test_base.py  test_plugin_dir_brute.py  test_plugin_port_scan.py  test_plugin_subdomain.py  test_plugin_vuln_scanner.py  test_plugin_web_tech.py
bbf/utils/: plugin_utils.py
examples/: basic_usage.py  config.yaml
tests/: minimal_plugin_test.py  simple_plugin_test.py  test_discovery.py  test_framework.py  test_plugin.py  test_plugin_loader.py  test_plugin_system.py
tests/core/: test_base.py  test_execution.py  test_framework.py  test_plugin_manager.py  test_security.py  test_validation.py
tests/core/ai/: test_openai.py  test_service.py
tests/core/database/: test_models.py  test_service.py
tests/debug/: debug_discovery.py  debug_plugin_discovery.py  debug_plugin_test.py
tests/integration/: conftest.py  test_base.py  test_plugin_dir_brute.py  test_plugin_port_scan.py  test_plugin_subdomain.py  test_plugin_vuln_scanner.py  test_plugin_web_tech.py
tests/plugins/recon/: test_dir_brute.py  test_port_scan.py  test_portscan.py  test_subdomain.py  test_vuln_scan.py  test_web_tech.py
tests/plugins/vuln/: test_scanner.py
tests/stages/: test_recon_stage.py
(+11 files in other folders)
