[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-framework"
version = "0.1.0"
description = "A modular, extensible framework for bug bounty and security testing"
readme = "README.md"
authors = [
    {name = "Kiddulu", email = "916kiddulu@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Security",
    "Intended Audience :: Bug Hunters",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=0.19.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "python-json-logger>=2.0.2",
    "colorlog>=6.7.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "dnspython>=2.2.0",
    "python-nmap>=0.7.1",
    "Jinja2>=3.0.0",
    "markdown2>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
]
pdf = [
    "reportlab>=3.6.0",
    "WeasyPrint>=53.0",
]
jira = ["jira>=3.0.0"]
defectdojo = ["defectdojo-api>=1.0.0"]

[project.urls]
Homepage = "https://github.com/kiddulu916/bug-bounty-framework"
Bug Tracker = "https://github.com/kiddulu916/bug-bounty-framework/issues"

[project.scripts]
bbf = "bbf.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[flake8]
max-line-length = 88
extend-ignore = "E203, W503"
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[egg_info]
tag_build = ""
tag_date = 0
